samples/_failures_safe/1761427845_924710_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d76521b.c: In function ‘main’:
./samples/SAFE/__tmp_8d76521b.c:164:5: error: expected ‘,’ or ‘;’ at end of input
  164 |     size_t len = strlen
      |     ^~~~~~
./samples/SAFE/__tmp_8d76521b.c:164:5: error: expected declaration or statement at end of input
